--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingTop="15dp"
-        android:paddingRight="10dp"
+        android:paddingRight="30dp"
         android:paddingBottom="15dp"
-        android:paddingLeft="10dp">
+        android:paddingLeft="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +26,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="CREATE AN ACCOUNT"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textSize="25dp"
+                android:textColor="#2699FB"/>
 
             <EditText
                 android:id="@+id/etName"
@@ -34,7 +36,10 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:hint="Name" />
+                android:hint="Name"
+                android:background="@drawable/edit_text_border"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"/>
 
             <EditText
                 android:id="@+id/etUsername"
@@ -42,7 +47,10 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:hint="Username" />
+                android:hint="Username"
+                android:background="@drawable/edit_text_border"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"/>
 
             <EditText
                 android:id="@+id/editText6"
@@ -50,20 +58,28 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPassword"
-                android:hint="Password"/>
+                android:hint="Password"
+                android:background="@drawable/edit_text_border"
+                android:padding="10dp"
+                android:layout_marginTop="20dp"/>
 
             <Button
                 android:id="@+id/btnContinue"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Continue"/>
+                android:text="Continue"
+                android:layout_marginTop="15dp"
+                android:padding="20dp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/button_border"/>
 
             <TextView
                 android:id="@+id/etHaveAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Already have an account?"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:layout_marginTop="120dp"/>
 
         </LinearLayout>
 
@@ -85,7 +101,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login"
-                android:id="@+id/btnLogin" />
+                android:id="@+id/btnLogin"
+                android:padding="20dp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/button_border"/>
         </LinearLayout>
 
 
