--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:padding="30dp"
+        android:gravity="center">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,10 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="15dp"
-        android:paddingRight="30dp"
-        android:paddingBottom="15dp"
-        android:paddingLeft="30dp"
+        android:padding="30dp"
         android:gravity="bottom">
 
         <LinearLayout
@@ -65,12 +63,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Login"
-                android:id="@+id/btnLogin" />
+                android:background="@drawable/button_border"
+                android:id="@+id/btnLogin"
+                android:textColor="#FFFFFF"
+                android:layout_marginBottom="15dp"
+                />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Create and account"
+                android:text="Create an account"
+                android:background="@drawable/button_border"
+                android:textColor="#FFFFFF"
                 android:id="@+id/btnRegister" />
 
         </LinearLayout>
