--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingTop="15dp"
-        android:paddingRight="30dp"
-        android:paddingBottom="15dp"
-        android:paddingLeft="30dp">
+        android:padding="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,18 +36,18 @@
                 android:hint="Name"
                 android:background="@drawable/edit_text_border"
                 android:padding="10dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="10dp"/>
 
             <EditText
-                android:id="@+id/etUsername"
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:hint="Username"
+                android:hint="Email"
                 android:background="@drawable/edit_text_border"
                 android:padding="10dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="10dp"/>
 
             <EditText
                 android:id="@+id/editText6"
@@ -61,7 +58,7 @@
                 android:hint="Password"
                 android:background="@drawable/edit_text_border"
                 android:padding="10dp"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="10dp"/>
 
             <Button
                 android:id="@+id/btnContinue"
@@ -74,7 +71,7 @@
                 android:background="@drawable/button_border"/>
 
             <TextView
-                android:id="@+id/etHaveAccount"
+                android:id="@+id/tvHaveAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Already have an account?"
@@ -95,17 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="center">
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:id="@+id/btnLogin"
-                android:padding="20dp"
-                android:textColor="#FFFFFF"
-                android:background="@drawable/button_border"/>
-        </LinearLayout>
+            android:gravity="center"/>
 
 
     </LinearLayout>
