--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="30dp">
+        android:padding="40dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -25,25 +25,27 @@
                 android:text="CREATE AN ACCOUNT"
                 android:textAlignment="center"
                 android:textSize="25dp"
-                android:textColor="#2699FB"/>
+                android:textColor="#2699FB"
+                android:paddingBottom="50dp"/>
 
             <EditText
-                android:id="@+id/etName"
+                android:id="@+id/etFullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:hint="Name"
+                android:hint="Full Name"
                 android:background="@drawable/edit_text_border"
                 android:padding="10dp"
                 android:layout_marginTop="10dp"/>
+
 
             <EditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="textEmailAddress"
                 android:hint="Email"
                 android:background="@drawable/edit_text_border"
                 android:padding="10dp"
