--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,12 +6,108 @@
     android:layout_height="match_parent"
     tools:context=".Login">
 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true"
+        android:padding="40dp"
+        android:scrollbarThumbHorizontal="@null"
+        android:scrollbarThumbVertical="@null">
 
-    <LinearLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ivLogo"
+                    android:src="@drawable/logo"/>
+
+                <EditText
+                    android:id="@+id/etEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="textEmailAddress"
+                    android:hint="Email"
+                    android:background="@drawable/edit_text_border"
+                    android:padding="10dp"
+                    android:layout_marginTop="15dp"/>
+
+                <EditText
+                    android:id="@+id/etPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:inputType="textPassword"
+                    android:hint="Password"
+                    android:background="@drawable/edit_text_border"
+                    android:padding="10dp"
+                    android:layout_marginTop="15dp"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Login"
+                    android:background="@drawable/button_border"
+                    android:id="@+id/btnLogin"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="80dp"
+                    />
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Create an account"
+                    android:background="@drawable/button_border"
+                    android:textColor="#FFFFFF"
+                    android:id="@+id/btnCreateAccount" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
+
+    <!--<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="40dp"
+        android:gravity="center">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="top">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ivLogo"
+                android:src="@drawable/logo"/>
+
+        </LinearLayout>
+
+    </LinearLayout>-->
+
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="30dp"
+        android:padding="40dp"
         android:gravity="center">
 
         <LinearLayout
@@ -19,6 +115,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">
+
 
             <EditText
                 android:id="@+id/etUsername"
@@ -44,13 +141,13 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+    </LinearLayout>-->
 
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="30dp"
+        android:padding="40dp"
         android:gravity="bottom">
 
         <LinearLayout
@@ -80,6 +177,6 @@
         </LinearLayout>
 
 
-    </LinearLayout>
+    </LinearLayout>-->
 
 </RelativeLayout>
