--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,82 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Login">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
         android:padding="40dp"
         android:scrollbarThumbHorizontal="@null"
-        android:scrollbarThumbVertical="@null">
+        android:scrollbarThumbVertical="@null"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:id="@+id/ivLogo"
+            android:src="@drawable/logo"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:ems="10"
+            android:inputType="textEmailAddress"
+            android:hint="Email"
+            android:background="@drawable/edit_text_border"
+            android:padding="10dp"
+            android:layout_marginTop="15dp"/>
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/ivLogo"
-                    android:src="@drawable/logo"/>
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:ems="10"
+            android:inputType="textPassword"
+            android:hint="Password"
+            android:background="@drawable/edit_text_border"
+            android:padding="10dp"
+            android:layout_marginTop="15dp"/>
 
-                <EditText
-                    android:id="@+id/etEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:ems="10"
-                    android:inputType="textEmailAddress"
-                    android:hint="Email"
-                    android:background="@drawable/edit_text_border"
-                    android:padding="10dp"
-                    android:layout_marginTop="15dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:background="@drawable/button_border"
+            android:id="@+id/btnLogin"
+            android:textColor="#FFFFFF"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="80dp"
+            />
 
-                <EditText
-                    android:id="@+id/etPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:ems="10"
-                    android:inputType="textPassword"
-                    android:hint="Password"
-                    android:background="@drawable/edit_text_border"
-                    android:padding="10dp"
-                    android:layout_marginTop="15dp"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Create an account"
+            android:background="@drawable/button_border"
+            android:textColor="#FFFFFF"
+            android:id="@+id/btnCreateAccount" />
 
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Login"
-                    android:background="@drawable/button_border"
-                    android:id="@+id/btnLogin"
-                    android:textColor="#FFFFFF"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="80dp"
-                    />
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Create an account"
-                    android:background="@drawable/button_border"
-                    android:textColor="#FFFFFF"
-                    android:id="@+id/btnCreateAccount" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    </LinearLayout>
 
 
 
@@ -179,4 +165,4 @@
 
     </LinearLayout>-->
 
-</RelativeLayout>
+</ScrollView>
