--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:fillViewport="true"
         android:padding="40dp"
         android:scrollbarThumbHorizontal="@null"
         android:scrollbarThumbVertical="@null">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvCreateAccount"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:text="CREATE AN ACCOUNT"
+            android:textAlignment="center"
+            android:textSize="25dp"
+            android:textColor="#2699FB"
+            android:paddingBottom="50dp"/>
 
-            <TextView
-                android:id="@+id/tvCreateAccount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="CREATE AN ACCOUNT"
-                android:textAlignment="center"
-                android:textSize="25dp"
-                android:textColor="#2699FB"
-                android:paddingBottom="50dp"/>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etFullNameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etFullName"
@@ -43,6 +42,12 @@
                 android:layout_marginTop="10dp"
                 android:drawableLeft="@drawable/ic_identity"/>
 
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etEmailLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etEmail"
@@ -56,38 +61,49 @@
                 android:layout_marginTop="10dp"
                 android:drawableLeft="@drawable/ic_email"/>
 
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etPasswordLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
+
             <EditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
+                android:ems="50"
                 android:inputType="textPassword"
                 android:hint="Password"
                 android:background="@drawable/edit_text_border"
                 android:padding="15dp"
                 android:layout_marginTop="10dp"
+                android:drawableStart="@drawable/ic_password"
                 android:drawableLeft="@drawable/ic_password"/>
 
-            <Button
-                android:id="@+id/btnContinue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Continue"
-                android:layout_marginTop="15dp"
-                android:padding="20dp"
-                android:textColor="#FFFFFF"
-                android:background="@drawable/button_border"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/tvHaveAccount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Already have an account?"
-                android:textAlignment="center"
-                android:layout_marginTop="120dp"/>
 
-        </LinearLayout>
 
-    </ScrollView>
+        <Button
+            android:id="@+id/btnContinue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Continue"
+            android:layout_marginTop="15dp"
+            android:padding="20dp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/button_border"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tvHaveAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Already have an account?"
+            android:textAlignment="center"
+            android:layout_marginTop="120dp"/>
+
+    </LinearLayout>
+
+</ScrollView>
