--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="fill_parent"
         android:fillViewport="true"
         android:padding="40dp"
         android:scrollbarThumbHorizontal="@null"
         android:scrollbarThumbVertical="@null">
 
-        <TextView
-            android:id="@+id/tvCreateAccount"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CREATE AN ACCOUNT"
-            android:textAlignment="center"
-            android:textSize="25dp"
-            android:textColor="#2699FB"
-            android:paddingBottom="50dp"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etFullNameLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tvCreateAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="CREATE AN ACCOUNT"
+                android:textAlignment="center"
+                android:textSize="25dp"
+                android:textColor="#2699FB"
+                android:paddingBottom="50dp"/>
 
             <EditText
                 android:id="@+id/etFullName"
@@ -42,12 +43,6 @@
                 android:layout_marginTop="10dp"
                 android:drawableLeft="@drawable/ic_identity"/>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etEmailLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/etEmail"
@@ -61,49 +56,38 @@
                 android:layout_marginTop="10dp"
                 android:drawableLeft="@drawable/ic_email"/>
 
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/etPasswordLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true">
-
             <EditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="50"
+                android:ems="10"
                 android:inputType="textPassword"
                 android:hint="Password"
                 android:background="@drawable/edit_text_border"
                 android:padding="15dp"
                 android:layout_marginTop="10dp"
-                android:drawableStart="@drawable/ic_password"
                 android:drawableLeft="@drawable/ic_password"/>
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <Button
+                android:id="@+id/btnContinue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Continue"
+                android:layout_marginTop="15dp"
+                android:padding="20dp"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/button_border"/>
 
+            <TextView
+                android:id="@+id/tvHaveAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Already have an account?"
+                android:textAlignment="center"
+                android:layout_marginTop="120dp"/>
 
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/btnContinue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Continue"
-            android:layout_marginTop="15dp"
-            android:padding="20dp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/button_border"/>
+    </ScrollView>
 
-        <TextView
-            android:id="@+id/tvHaveAccount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Already have an account?"
-            android:textAlignment="center"
-            android:layout_marginTop="120dp"/>
-
-    </LinearLayout>
-
-</ScrollView>
+</RelativeLayout>
