Plan Fragment 10/3/2019 - DatePicker added and updated design

--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -1,64 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/text_plan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/etPlanDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/plan_description"
-        android:inputType="text" />
-
-    <EditText
-        android:id="@+id/etStartDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:hint="@string/plan_start_date"
-        android:focusable="false" />
-
-    <EditText
-        android:id="@+id/etEndDate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:clickable="true"
-        android:hint="@string/plan_end_date" />
+    android:orientation="vertical"
+    tools:context=".DrawerActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center"
+        android:fillViewport="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="40dp"
+        android:scrollbarThumbHorizontal="@null"
+        android:scrollbarThumbVertical="@null">
 
-        <Button
-            android:id="@+id/btnCreate"
+        <TextView
+            android:id="@+id/text_plan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Create" />
+            android:text="START A PLAN"
+            android:textAlignment="center"
+            android:textColor="#2699FB"
+            android:textSize="40sp" />
 
-        <Button
-            android:id="@+id/btnCancel"
+        <EditText
+            android:id="@+id/etPlanDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel" />
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edit_text_border"
+            android:hint="@string/plan_description"
+            android:inputType="text"
+            android:padding="15dp" />
+
+        <EditText
+            android:id="@+id/etStartDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edit_text_border"
+            android:clickable="true"
+            android:focusable="false"
+            android:hint="@string/plan_start_date"
+            android:padding="15dp" />
+
+        <EditText
+            android:id="@+id/etEndDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/edit_text_border"
+            android:clickable="true"
+            android:focusable="false"
+            android:hint="@string/plan_end_date"
+            android:padding="15dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnCreate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Create"
+                android:textColor="#FFFFFF"
+                android:background="@drawable/button_border"
+                android:layout_margin="5dp"/>
+
+            <Button
+                android:id="@+id/btnCancel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cancel"
+                android:textColor="#FFFFFF"
+                android:layout_margin="5dp"
+                android:background="@drawable/button_border"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
 
-</LinearLayout>
+</ScrollView>
