--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="CustomRatingBar">CustomRatingBar
+    <style name="CustomRatingBar" parent="Theme.AppCompat">
         <item name="colorControlNormal">#CDDC39</item>
         <item name="colorControlActivated">#FFC107</item>
     </style>
