--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,13 @@
 
     <item
         android:id="@+id/navigation_progress"
-        android:icon="@drawable/ic_progress"
+        android:icon="@drawable/ic_progress_track"
         android:title="@string/title_progress" />
+
+    <item
+        android:id="@+id/navigation_chart"
+        android:icon="@drawable/ic_progress"
+        android:title="@string/title_chart"/>
 
     <item
         android:id="@+id/navigation_team"
