--- a/app/src/main/res/navigation/mobile_navigation_bottom.xml
+++ b/app/src/main/res/navigation/mobile_navigation_bottom.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/fragment_progress" />
 
     <fragment
+        android:id="@+id/navigation_chart"
+        android:name="com.tap.taskassigningandplanning.utils.chart.ChartFragment"
+        android:label="@string/title_progress"
+        tools:layout="@layout/fragment_progress_chart" />
+
+    <fragment
         android:id="@+id/navigation_team"
         android:name="com.tap.taskassigningandplanning.utils.team.TeamFragment"
         android:label="@string/title_team"
